# server

./: README.md  package-lock.json
frontend/src/Components/SearchPage/: ResultBox.js  SearchPage.js
frontend/src/Components/Sidebar/Modal/: ModalContent.js  ModalContent.test.js
frontend/src/Components/Upload/: UploadPage.js
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
ui/.storybook/: main.ts  preview.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: Button.stories.tsx
ui/src/locales/: fr-FR.json  useLocales.ts
webserver/: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml
webserver/migrations/2024-08-30-142209_create_users/: up.sql
webserver/src/: main.rs
webserver/src/database/: mod.rs  models.rs  schema.rs
webserver/src/server/: mod.rs  user.rs
webserver/src/server/auth/: mod.rs
