[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
diesel = { version = "2.2.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
