[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
diesel = { version = "2.2.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
